Bug 1326408 - Fix ESLint errors in devtools/client/netmonitor/test and devtools/client/netmonitor/har/test. r=ntim
MozReview-Commit-ID: D2eCfvpXoOJ

UltraBlame original commit: e4c79eb473ae27750e6d44fcc8ff2c0a776c7084

--- a/devtools/client/netmonitor/har/test/html_har_post-data-test-page.html
+++ b/devtools/client/netmonitor/har/test/html_har_post-data-test-page.html
@@ -151,14 +151,26 @@ text
 javascript
 "
 >
+/
+*
+exported
+executeTest
+executeTest2
+*
+/
+"
+use
+strict
+"
+;
 function
 post
 (
-aAddress
-aData
+address
+data
 )
 {
-var
+let
 xhr
 =
 new
@@ -173,7 +185,7 @@ open
 "
 POST
 "
-aAddress
+address
 true
 )
 ;
@@ -197,7 +209,7 @@ xhr
 .
 send
 (
-aData
+data
 )
 ;
 }
@@ -206,7 +218,7 @@ executeTest
 (
 )
 {
-var
+const
 url
 =
 "
@@ -221,7 +233,7 @@ page
 html
 "
 ;
-var
+const
 data
 =
 "
@@ -256,7 +268,7 @@ executeTest2
 size
 )
 {
-var
+const
 url
 =
 "
@@ -271,7 +283,7 @@ page
 html
 "
 ;
-var
+const
 data
 =
 "
