--- a/devtools/client/netmonitor/test/html_content-type-without-cache-test-page.html
+++ b/devtools/client/netmonitor/test/html_content-type-without-cache-test-page.html
@@ -150,14 +150,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -172,7 +183,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -196,7 +207,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -216,6 +227,18 @@ performRequests
 (
 )
 {
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 get
 (
 "
@@ -413,6 +436,18 @@ Done
 }
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 <
 /
