--- a/devtools/client/netmonitor/test/html_copy-as-curl.html
+++ b/devtools/client/netmonitor/test/html_copy-as-curl.html
@@ -151,13 +151,24 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequest
+*
+/
+"
+use
+strict
+"
+;
 function
 performRequest
 (
-aUrl
+url
 )
 {
-var
+let
 xhr
 =
 new
@@ -172,7 +183,7 @@ open
 "
 GET
 "
-aUrl
+url
 true
 )
 ;
