--- a/devtools/client/netmonitor/test/html_cors-test-page.html
+++ b/devtools/client/netmonitor/test/html_cors-test-page.html
@@ -152,6 +152,17 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 post
 (
@@ -160,7 +171,7 @@ contentType
 postData
 )
 {
-var
+let
 xhr
 =
 new
