--- a/devtools/client/netmonitor/test/html_curl-utils.html
+++ b/devtools/client/netmonitor/test/html_curl-utils.html
@@ -293,14 +293,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 ajaxGet
 (
-aUrl
-aCallback
+url
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -315,7 +326,7 @@ open
 "
 GET
 "
-aUrl
+url
 +
 "
 ?
@@ -358,7 +369,7 @@ function
 (
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -374,11 +385,11 @@ send
 function
 ajaxPost
 (
-aUrl
-aCallback
+url
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -393,7 +404,7 @@ open
 "
 POST
 "
-aUrl
+url
 true
 )
 ;
@@ -443,13 +454,13 @@ function
 (
 )
 {
-aCallback
+callback
 (
 )
 ;
 }
 ;
-var
+const
 params
 =
 "
@@ -477,11 +488,11 @@ params
 function
 ajaxMultipart
 (
-aUrl
-aCallback
+url
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -496,7 +507,7 @@ open
 "
 POST
 "
-aUrl
+url
 true
 )
 ;
@@ -524,7 +535,7 @@ function
 (
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -542,7 +553,7 @@ blob
 =
 >
 {
-var
+let
 formData
 =
 new
@@ -593,7 +604,7 @@ submitForm
 (
 )
 {
-var
+let
 form
 =
 document
@@ -636,14 +647,14 @@ initCanvas
 (
 )
 {
-var
+let
 canvas
 =
 getCanvasElem
 (
 )
 ;
-var
+let
 ctx
 =
 canvas
@@ -689,12 +700,12 @@ strokeRect
 function
 performRequests
 (
-aUrl
+url
 )
 {
 ajaxGet
 (
-aUrl
+url
 (
 )
 =
@@ -702,7 +713,7 @@ aUrl
 {
 ajaxPost
 (
-aUrl
+url
 (
 )
 =
@@ -710,7 +721,7 @@ aUrl
 {
 ajaxMultipart
 (
-aUrl
+url
 (
 )
 =
