--- a/devtools/client/netmonitor/test/html_custom-get-page.html
+++ b/devtools/client/netmonitor/test/html_custom-get-page.html
@@ -153,14 +153,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -175,7 +186,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -199,7 +210,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -224,7 +235,7 @@ to
 defeat
 caching
 .
-var
+let
 count
 =
 0
@@ -232,9 +243,9 @@ count
 function
 performRequests
 (
-aTotal
-aUrl
-aTimeout
+total
+url
+timeout
 =
 0
 )
@@ -242,7 +253,7 @@ aTimeout
 if
 (
 !
-aTotal
+total
 )
 {
 return
@@ -250,7 +261,7 @@ return
 }
 get
 (
-aUrl
+url
 |
 |
 "
@@ -275,11 +286,11 @@ bind
 this
 -
 -
-aTotal
-aUrl
-aTimeout
+total
+url
+timeout
 )
-aTimeout
+timeout
 )
 ;
 }
