--- a/devtools/client/netmonitor/test/html_cyrillic-test-page.html
+++ b/devtools/client/netmonitor/test/html_cyrillic-test-page.html
@@ -158,14 +158,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -180,7 +191,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -204,7 +215,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
