--- a/devtools/client/netmonitor/test/html_image-tooltip-test-page.html
+++ b/devtools/client/netmonitor/test/html_image-tooltip-test-page.html
@@ -149,12 +149,23 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 performRequests
 (
 )
 {
-var
+let
 xhr
 =
 new
