--- a/devtools/client/netmonitor/test/html_infinite-get-page.html
+++ b/devtools/client/netmonitor/test/html_infinite-get-page.html
@@ -149,14 +149,19 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -171,7 +176,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -195,7 +200,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -220,7 +225,7 @@ to
 defeat
 caching
 .
-var
+let
 count
 =
 0
