--- a/devtools/client/netmonitor/test/html_json-basic.html
+++ b/devtools/client/netmonitor/test/html_json-basic.html
@@ -178,14 +178,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -200,7 +211,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -224,7 +235,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
