--- a/devtools/client/netmonitor/test/html_json-long-test-page.html
+++ b/devtools/client/netmonitor/test/html_json-long-test-page.html
@@ -151,14 +151,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -173,7 +184,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -197,7 +208,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
