--- a/devtools/client/netmonitor/test/html_params-test-page.html
+++ b/devtools/client/netmonitor/test/html_params-test-page.html
@@ -151,14 +151,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aQuery
+address
+query
 )
 {
-var
+let
 xhr
 =
 new
@@ -173,9 +184,9 @@ open
 "
 GET
 "
-aAddress
+address
 +
-aQuery
+query
 true
 )
 ;
@@ -189,13 +200,13 @@ send
 function
 post
 (
-aAddress
-aQuery
-aContentType
-aPostBody
+address
+query
+contentType
+postBody
 )
 {
-var
+let
 xhr
 =
 new
@@ -210,9 +221,9 @@ open
 "
 POST
 "
-aAddress
+address
 +
-aQuery
+query
 true
 )
 ;
@@ -225,14 +236,14 @@ content
 -
 type
 "
-aContentType
+contentType
 )
 ;
 xhr
 .
 send
 (
-aPostBody
+postBody
 )
 ;
 }
@@ -241,7 +252,7 @@ performRequests
 (
 )
 {
-var
+const
 urlencoded
 =
 "
@@ -256,6 +267,18 @@ form
 urlencoded
 "
 ;
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 setTimeout
 (
 function
@@ -334,12 +357,12 @@ a
 b
 "
 urlencoded
-'
+"
 ?
 foo
 =
 bar
-'
+"
 )
 ;
 setTimeout
@@ -420,12 +443,12 @@ a
 b
 "
 undefined
-'
+"
 ?
 foo
 =
 bar
-'
+"
 )
 ;
 setTimeout
@@ -475,6 +498,18 @@ Done
 10
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 <
 /
