--- a/devtools/client/netmonitor/test/html_post-data-test-page.html
+++ b/devtools/client/netmonitor/test/html_post-data-test-page.html
@@ -286,15 +286,26 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 post
 (
-aAddress
-aMessage
-aCallback
+address
+message
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -309,7 +320,7 @@ open
 "
 POST
 "
-aAddress
+address
 true
 )
 ;
@@ -335,7 +346,7 @@ urlencoded
 "
 )
 ;
-var
+let
 data
 =
 "
@@ -343,10 +354,10 @@ data
 ;
 for
 (
-var
+let
 i
 in
-aMessage
+message
 )
 {
 data
@@ -362,7 +373,7 @@ i
 =
 "
 +
-aMessage
+message
 [
 i
 ]
@@ -388,7 +399,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -406,12 +417,12 @@ data
 function
 form
 (
-aAddress
-aForm
-aCallback
+address
+formName
+callback
 )
 {
-var
+let
 formData
 =
 new
@@ -423,7 +434,7 @@ forms
 .
 namedItem
 (
-aForm
+formName
 )
 )
 ;
@@ -441,7 +452,7 @@ data
 "
 )
 ;
-var
+let
 xhr
 =
 new
@@ -456,7 +467,7 @@ open
 "
 POST
 "
-aAddress
+address
 true
 )
 ;
@@ -480,7 +491,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -500,7 +511,7 @@ performRequests
 (
 )
 {
-var
+const
 url
 =
 "
@@ -513,7 +524,7 @@ server
 sjs
 "
 ;
-var
+const
 url1
 =
 url
@@ -533,7 +544,7 @@ type
 urlencoded
 "
 ;
-var
+const
 url2
 =
 url
