--- a/devtools/client/netmonitor/test/html_post-raw-test-page.html
+++ b/devtools/client/netmonitor/test/html_post-raw-test-page.html
@@ -150,15 +150,26 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 post
 (
-aAddress
-aMessage
-aCallback
+address
+message
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -173,7 +184,7 @@ open
 "
 POST
 "
-aAddress
+address
 true
 )
 ;
@@ -219,7 +230,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -230,7 +241,7 @@ xhr
 .
 send
 (
-aMessage
+message
 )
 ;
 }
@@ -239,7 +250,7 @@ performRequests
 (
 )
 {
-var
+const
 rawData
 =
 "
