--- a/devtools/client/netmonitor/test/html_post-raw-with-headers-test-page.html
+++ b/devtools/client/netmonitor/test/html_post-raw-with-headers-test-page.html
@@ -152,15 +152,26 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 post
 (
-aAddress
-aMessage
-aCallback
+address
+message
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -175,7 +186,7 @@ open
 "
 POST
 "
-aAddress
+address
 true
 )
 ;
@@ -199,7 +210,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -210,7 +221,7 @@ xhr
 .
 send
 (
-aMessage
+message
 )
 ;
 }
@@ -219,7 +230,7 @@ performRequests
 (
 )
 {
-var
+let
 rawData
 =
 [
