--- a/devtools/client/netmonitor/test/html_single-get-page.html
+++ b/devtools/client/netmonitor/test/html_single-get-page.html
@@ -153,14 +153,19 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -175,7 +180,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -199,7 +204,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
