--- a/devtools/client/netmonitor/test/html_statistics-test-page.html
+++ b/devtools/client/netmonitor/test/html_statistics-test-page.html
@@ -149,13 +149,18 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
+address
 )
 {
-var
+let
 xhr
 =
 new
@@ -170,7 +175,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
