--- a/devtools/client/netmonitor/test/html_status-codes-test-page.html
+++ b/devtools/client/netmonitor/test/html_status-codes-test-page.html
@@ -150,14 +150,26 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+performCachedRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -172,7 +184,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -196,7 +208,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -216,6 +228,18 @@ performRequests
 (
 )
 {
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 get
 (
 "
@@ -340,6 +364,18 @@ Done
 }
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 function
 performCachedRequests
