--- a/devtools/client/netmonitor/test/service-workers/status-codes.html
+++ b/devtools/client/netmonitor/test/service-workers/status-codes.html
@@ -150,6 +150,19 @@ text
 javascript
 "
 >
+/
+*
+exported
+registerServiceWorker
+unregisterServiceWorker
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 let
 swRegistration
 ;
@@ -257,9 +270,9 @@ sw
 .
 addEventListener
 (
-'
+"
 controllerchange
-'
+"
 function
 (
 )
