--- a/devtools/client/netmonitor/test/html_filter-test-page.html
+++ b/devtools/client/netmonitor/test/html_filter-test-page.html
@@ -149,14 +149,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -181,7 +192,7 @@ open
 "
 GET
 "
-aAddress
+address
 +
 "
 &
@@ -215,7 +226,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
@@ -233,19 +244,31 @@ null
 function
 performRequests
 (
-aOptions
+optionsText
 )
 {
-var
+const
 options
 =
 JSON
 .
 parse
 (
-aOptions
+optionsText
 )
 ;
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 get
 (
 "
@@ -471,6 +494,18 @@ Done
 }
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 <
 /
