--- a/devtools/client/netmonitor/test/html_jsonp-test-page.html
+++ b/devtools/client/netmonitor/test/html_jsonp-test-page.html
@@ -149,14 +149,25 @@ text
 javascript
 "
 >
+/
+*
+exported
+performRequests
+*
+/
+"
+use
+strict
+"
+;
 function
 get
 (
-aAddress
-aCallback
+address
+callback
 )
 {
-var
+let
 xhr
 =
 new
@@ -171,7 +182,7 @@ open
 "
 GET
 "
-aAddress
+address
 true
 )
 ;
@@ -195,7 +206,7 @@ this
 DONE
 )
 {
-aCallback
+callback
 (
 )
 ;
