Bug 1338567 - Update debugger frontend (2/10/2017) r=jdescottes.
MozReview-Commit-ID: 1Sl9jB0M0af

UltraBlame original commit: e9dcba1a87af814aa7bb81f8233bb5461f8b84a1

--- a/devtools/client/debugger/new/index.html
+++ b/devtools/client/debugger/new/index.html
@@ -317,8 +317,6 @@ js
 const
 {
 require
-:
-devtoolsRequire
 }
 =
 BrowserLoader
@@ -344,26 +342,11 @@ window
 }
 )
 ;
-<
-/
-script
->
-<
-script
-type
+Debugger
 =
+require
+(
 "
-text
-/
-javascript
-"
-src
-=
-"
-resource
-:
-/
-/
 devtools
 /
 client
@@ -373,10 +356,9 @@ debugger
 new
 /
 debugger
-.
-js
 "
->
+)
+;
 <
 /
 script
