--- a/devtools/client/debugger/new/test/mochitest/examples/doc-sources.html
+++ b/devtools/client/debugger/new/test/mochitest/examples/doc-sources.html
@@ -113,6 +113,24 @@ script
 >
 <
 script
+src
+=
+"
+nested
+/
+nested
+-
+source
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 >
 /
 /
@@ -163,44 +181,45 @@ x
 5
 ;
 }
-<
-/
+function
+loadScript
+(
+)
+{
+const
 script
->
-<
+=
+document
+.
+createElement
+(
+"
 script
+"
+)
+;
+script
+.
 src
 =
 "
-nested
-/
-nested
--
-source
+math
+.
+min
 .
 js
 "
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-nested
-/
-deeper
-/
-deeper
--
-source
+;
+document
 .
-js
-"
->
+body
+.
+appendChild
+(
+script
+)
+;
+}
 <
 /
 script
