Bug 1313326 - Part 3: Update about:telemetry to show child process events. r=dexter
UltraBlame original commit: fe98d700bb64c12285d49e4a7cc77473fa72326e

--- a/toolkit/content/aboutTelemetry.xhtml
+++ b/toolkit/content/aboutTelemetry.xhtml
@@ -2186,6 +2186,41 @@ span
 >
 <
 div
+class
+=
+"
+processes
+-
+ui
+"
+>
+<
+select
+id
+=
+"
+events
+-
+processes
+"
+class
+=
+"
+process
+-
+picker
+"
+>
+<
+/
+select
+>
+<
+/
+div
+>
+<
+div
 id
 =
 "
