Backed out 2 changesets (bug 1338567) for near permafailing debugger test failures a=backout CLOSED TREE
Backed out changeset c594a1353f5d (bug 1338567)
Backed out changeset e9dcba1a87af (bug 1338567)

MozReview-Commit-ID: 4vB5haf8zyB

UltraBlame original commit: df4752809a835a6c7a0dc7dd0d8f903688b1c9db

--- a/devtools/client/debugger/new/index.html
+++ b/devtools/client/debugger/new/index.html
@@ -317,6 +317,8 @@ js
 const
 {
 require
+:
+devtoolsRequire
 }
 =
 BrowserLoader
@@ -342,11 +344,26 @@ window
 }
 )
 ;
-Debugger
+<
+/
+script
+>
+<
+script
+type
 =
-require
-(
 "
+text
+/
+javascript
+"
+src
+=
+"
+resource
+:
+/
+/
 devtools
 /
 client
@@ -356,9 +373,10 @@ debugger
 new
 /
 debugger
+.
+js
 "
-)
-;
+>
 <
 /
 script
