--- a/devtools/client/debugger/new/test/mochitest/examples/doc-sources.html
+++ b/devtools/client/debugger/new/test/mochitest/examples/doc-sources.html
@@ -113,24 +113,6 @@ script
 >
 <
 script
-src
-=
-"
-nested
-/
-nested
--
-source
-.
-js
-"
->
-<
-/
-script
->
-<
-script
 >
 /
 /
@@ -181,45 +163,44 @@ x
 5
 ;
 }
-function
-loadScript
-(
-)
-{
-const
+<
+/
 script
-=
-document
-.
-createElement
-(
-"
+>
+<
 script
-"
-)
-;
-script
-.
 src
 =
 "
-math
-.
-min
+nested
+/
+nested
+-
+source
 .
 js
 "
-;
-document
-.
-body
-.
-appendChild
-(
+>
+<
+/
 script
-)
-;
-}
+>
+<
+script
+src
+=
+"
+nested
+/
+deeper
+/
+deeper
+-
+source
+.
+js
+"
+>
 <
 /
 script
