Bug 1137567 - Make nsWindow for Android use TextEventDispatcher; r=esawin r=rbarker r=masayuki r=snorp
Bug 1137567 - 1. Allow dispatching key events during composition; r=esawin

We potentially dispatch key events during composition to provide
compatibility for pages that only listen to key events.

Bug 1137567 - 2. Allow keyboard events in DispatchInputEvent when not on APZ thread; r=rbarker

We use nsIWidget::DispatchInputEvent to dispatch our keyboard events on
the Gecko thread, which on Android is not the APZ controller thread. We
should allow these events to pass instead of crashing.

Bug 1137567 - 3. Add GeckoEditableSupport class to support TextEventDispatcher; r=masayuki

Add a separate GeckoEditableSupport class, which implements
TextEventDispatcherListener and uses TextEventDispatcher for IME
operations. The new class is entirely separate from nsWindow to allow it
to be independently used in content processes as well.

Most of the code is copied from nsWindow::GeckoViewSupport, and adapted
to use TextEventDispatcher.

Bug 1137567 - 4. Make nsWindow::WindowPtr available for outside classes; r=snorp

Make nsWindow::WindowPtr available not just for classes inside nsWindow
but for outside classes as well. Also, add support for RefPtr native
objects to nsWindow::NativePtr.

Bug 1137567 - 5. Use GeckoEditableSupport in nsWindow; r=esawin

Use the new GeckoEditableSupport class in nsWindow to replace the
previous code in nsWindow::GeckoViewSupport. GeckoEditable native
methods now go to GeckoEditableSupport instead of GeckoViewSupport.

Several native methods in GeckoEditable are changed from
dispatchTo="proxy" to dispatchTo="gecko", because we no longer need the
special nsWindow::WindowEvent wrapper for our native calls.

Bug 1137567 - 6. Use pushPrefEnv in test_assign_event_data.html; r=masayuki

setAndObserveCompositionPref in test_assign_event_data.html does not
invoke the callback if the pref is already set. This patch changes it to
use SpecialPowers.pushPre

--- a/widget/tests/test_assign_event_data.html
+++ b/widget/tests/test_assign_event_data.html
@@ -4316,97 +4316,6 @@ keyboardevent
 dispatch_during_composition
 "
 ;
-let
-branch
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-"
-]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-nsIPrefService
-)
-.
-getBranch
-(
-pref
-)
-;
-let
-obs
-=
-SpecialPowers
-.
-wrapCallback
-(
-function
-(
-)
-{
-branch
-.
-removeObserver
-(
-"
-"
-obs
-)
-;
-/
-/
-Make
-sure
-the
-code
-under
-test
-sees
-the
-change
-first
-so
-executeSoon
-(
-)
-.
-SimpleTest
-.
-executeSoon
-(
-aCallback
-)
-;
-}
-)
-;
-branch
-.
-addObserver
-(
-"
-"
-obs
-false
-)
-;
 if
 (
 aValue
@@ -4418,9 +4327,20 @@ null
 {
 SpecialPowers
 .
-clearUserPref
+pushPrefEnv
 (
+{
+"
+clear
+"
+:
+[
+[
 pref
+]
+]
+}
+aCallback
 )
 ;
 }
@@ -4428,10 +4348,21 @@ else
 {
 SpecialPowers
 .
-setBoolPref
+pushPrefEnv
 (
+{
+"
+set
+"
+:
+[
+[
 pref
 aValue
+]
+]
+}
+aCallback
 )
 ;
 }
