Bug 1335539 - Get rid of nsIDOMWindowUtils.wrapDOMFile, r=smaug, r=Gijs
UltraBlame original commit: 429ff39f3d28b195fb5ee1467cd8126bab3d89b8

--- a/devtools/client/webide/test/test_simulators.html
+++ b/devtools/client/webide/test/test_simulators.html
@@ -1557,10 +1557,11 @@ picker
 .
 MockFilePicker
 .
-returnFiles
-=
+setFiles
+(
 [
 ]
+)
 ;
 yield
 set
@@ -1648,6 +1649,7 @@ textContent
 custom
 path
 )
+yield
 MockFilePicker
 .
 useAnyFile
@@ -1670,10 +1672,7 @@ fakeBinary
 =
 MockFilePicker
 .
-returnFiles
-[
-0
-]
+file
 ;
 ok
 (
@@ -1891,10 +1890,11 @@ customized
 ;
 MockFilePicker
 .
-returnFiles
-=
+setFiles
+(
 [
 ]
+)
 ;
 yield
 set
@@ -1974,11 +1974,12 @@ TmpD
 ;
 MockFilePicker
 .
-returnFiles
-=
+setFiles
+(
 [
 fakeProfile
 ]
+)
 ;
 yield
 set
