--- a/dom/ipc/tests/test_bug1086684.html
+++ b/dom/ipc/tests/test_bug1086684.html
@@ -187,8 +187,8 @@ content
 ;
 MockFilePicker
 .
-returnFiles
-=
+setFiles
+(
 [
 message
 .
@@ -196,6 +196,7 @@ data
 .
 file
 ]
+)
 ;
 MockFilePicker
 .
