Backed out 2 changesets (bug 1334975, bug 1335539) for merge conflicts a=backout
Backed out changeset 429ff39f3d28 (bug 1335539)
Backed out changeset eea959a93ce4 (bug 1334975)

MozReview-Commit-ID: GlvA0B0vHRT

UltraBlame original commit: 63c4e77cfe90e90d35d85e1a4821015823c4ecee

--- a/devtools/client/webide/test/test_simulators.html
+++ b/devtools/client/webide/test/test_simulators.html
@@ -1557,11 +1557,10 @@ picker
 .
 MockFilePicker
 .
-setFiles
-(
+returnFiles
+=
 [
 ]
-)
 ;
 yield
 set
@@ -1649,7 +1648,6 @@ textContent
 custom
 path
 )
-yield
 MockFilePicker
 .
 useAnyFile
@@ -1672,7 +1670,10 @@ fakeBinary
 =
 MockFilePicker
 .
-file
+returnFiles
+[
+0
+]
 ;
 ok
 (
@@ -1890,11 +1891,10 @@ customized
 ;
 MockFilePicker
 .
-setFiles
-(
+returnFiles
+=
 [
 ]
-)
 ;
 yield
 set
@@ -1974,12 +1974,11 @@ TmpD
 ;
 MockFilePicker
 .
-setFiles
-(
+returnFiles
+=
 [
 fakeProfile
 ]
-)
 ;
 yield
 set
