--- a/dom/ipc/tests/test_bug1086684.html
+++ b/dom/ipc/tests/test_bug1086684.html
@@ -187,8 +187,8 @@ content
 ;
 MockFilePicker
 .
-setFiles
-(
+returnFiles
+=
 [
 message
 .
@@ -196,7 +196,6 @@ data
 .
 file
 ]
-)
 ;
 MockFilePicker
 .
