Backed out changeset 04d6b4518dbf (bug 1343749)
UltraBlame original commit: 77f475062c1dc0f13689118ab94840f9ca73d0c7

--- a/dom/media/test/test_loop.html
+++ b/dom/media/test/test_loop.html
@@ -124,6 +124,28 @@ text
 javascript
 "
 >
+/
+/
+longer
+timeout
+for
+slow
+platforms
+if
+(
+isSlowPlatform
+(
+)
+)
+{
+SimpleTest
+.
+requestLongerTimeout
+(
+2
+)
+;
+}
 var
 manager
 =
