--- a/dom/media/test/test_playback.html
+++ b/dom/media/test/test_playback.html
@@ -130,6 +130,34 @@ text
 javascript
 "
 >
+/
+/
+longer
+timeout
+for
+slow
+platforms
+if
+(
+isSlowPlatform
+(
+)
+)
+{
+SimpleTest
+.
+requestLongerTimeout
+(
+3
+)
+;
+SimpleTest
+.
+requestCompleteLog
+(
+)
+;
+}
 var
 manager
 =
