--- a/dom/media/test/test_playback_reactivate.html
+++ b/dom/media/test/test_playback_reactivate.html
@@ -191,6 +191,36 @@ end
 .
 *
 /
+/
+/
+longer
+timeout
+for
+slow
+platforms
+if
+(
+isSlowPlatform
+(
+)
+)
+{
+SimpleTest
+.
+requestLongerTimeout
+(
+1
+.
+5
+)
+;
+SimpleTest
+.
+requestCompleteLog
+(
+)
+;
+}
 var
 manager
 =
