--- a/dom/media/test/test_played.html
+++ b/dom/media/test/test_played.html
@@ -151,6 +151,47 @@ application
 javascript
 '
 >
+/
+/
+longer
+timeout
+for
+sometimes
+B2G
+emulator
+runs
+very
+slowly
+if
+(
+SpecialPowers
+.
+Services
+.
+appinfo
+.
+name
+=
+=
+"
+B2G
+"
+)
+{
+SimpleTest
+.
+requestLongerTimeout
+(
+3
+)
+;
+}
+SimpleTest
+.
+requestCompleteLog
+(
+)
+;
 let
 manager
 =
