--- a/dom/media/test/test_bug879717.html
+++ b/dom/media/test/test_bug879717.html
@@ -141,6 +141,30 @@ text
 javascript
 "
 >
+/
+/
+longer
+timeout
+for
+slow
+platforms
+if
+(
+isSlowPlatform
+(
+)
+)
+{
+SimpleTest
+.
+requestLongerTimeout
+(
+1
+.
+5
+)
+;
+}
 var
 manager
 =
