Bug 1289742. P3 - use the 'once' handler. r=kaku
MozReview-Commit-ID: LOxpTEUvKID

UltraBlame original commit: 34ad60160536daa711cd574721a03538cd699d76

--- a/dom/media/test/test_load_same_resource.html
+++ b/dom/media/test/test_load_same_resource.html
@@ -218,16 +218,6 @@ _expectedDuration
 )
 ;
 }
-e
-.
-removeEventListener
-(
-"
-loadeddata
-"
-cloneLoaded
-)
-;
 removeNodeAndSource
 (
 e
@@ -447,12 +437,20 @@ addEventListener
 loadeddata
 "
 cloneLoaded
+{
+once
+:
+true
+}
 )
 ;
 clone
 .
-onloadstart
-=
+addEventListener
+(
+"
+loadstart
+"
 function
 (
 evt
@@ -476,14 +474,6 @@ loading
 .
 "
 )
-;
-evt
-.
-target
-.
-onloadstart
-=
-null
 ;
 /
 /
@@ -577,14 +567,11 @@ e
 )
 ;
 }
-e
-.
-removeEventListener
-(
-"
-loadeddata
-"
-tryClone
+{
+once
+:
+true
+}
 )
 ;
 }
@@ -775,6 +762,11 @@ addEventListener
 loadeddata
 "
 tryClone
+{
+once
+:
+true
+}
 )
 ;
 e
