Bug 1289742. P5 - test.duration is mandatory to run the test. r=kaku
MozReview-Commit-ID: GSvVrCBTeQB

UltraBlame original commit: c0b2e94b0b5ef433aaad1a4593c11cc62d6a8b70

--- a/dom/media/test/test_load_same_resource.html
+++ b/dom/media/test/test_load_same_resource.html
@@ -143,6 +143,44 @@ new
 MediaTestManager
 ;
 function
+checkDuration
+(
+actual
+expected
+name
+)
+{
+ok
+(
+Math
+.
+abs
+(
+actual
+-
+expected
+)
+<
+0
+.
+1
+{
+name
+}
+duration
+:
+{
+actual
+}
+expected
+:
+{
+expected
+}
+)
+;
+}
+function
 cloneLoaded
 (
 event
@@ -165,59 +203,19 @@ event
 .
 target
 ;
-if
-(
-e
-.
-_expectedDuration
-)
-{
-ok
-(
-Math
-.
-abs
+checkDuration
 (
 e
 .
 duration
--
 e
 .
 _expectedDuration
-)
-<
-0
-.
-1
-"
-Clone
-"
-+
 e
 .
-currentSrc
-+
-"
-duration
-:
-"
-+
-e
-.
-duration
-+
-"
-expected
-:
-"
-+
-e
-.
-_expectedDuration
+token
 )
 ;
-}
 removeNodeAndSource
 (
 e
@@ -372,52 +370,17 @@ logEvent
 }
 )
 ;
-if
-(
-e
-.
-_expectedDuration
-)
-{
-ok
-(
-Math
-.
-abs
+checkDuration
 (
 e
 .
 duration
--
 e
 .
 _expectedDuration
-)
-<
-0
-.
-1
 e
 .
-currentSrc
-+
-"
-duration
-:
-"
-+
-e
-.
-duration
-+
-"
-expected
-:
-"
-+
-e
-.
-_expectedDuration
+token
 )
 ;
 clone
@@ -428,7 +391,6 @@ e
 .
 _expectedDuration
 ;
-}
 clone
 .
 addEventListener
@@ -724,13 +686,6 @@ test
 .
 name
 ;
-if
-(
-test
-.
-duration
-)
-{
 e
 .
 _expectedDuration
@@ -739,19 +694,24 @@ test
 .
 duration
 ;
-}
 ok
 (
 true
-"
 Trying
 to
 load
-"
-+
+{
 test
 .
 name
+}
+duration
+=
+{
+test
+.
+duration
+}
 )
 ;
 e
