Bug 1289742. P6 - give the cloned test a different token for better logging messages. r=kaku
MozReview-Commit-ID: 3Hc0SON17Lt

UltraBlame original commit: c3f28dc126fa6dee249c0a4a5c80fcdf3c3d19c7

--- a/dom/media/test/test_load_same_resource.html
+++ b/dom/media/test/test_load_same_resource.html
@@ -186,22 +186,24 @@ cloneLoaded
 event
 )
 {
-ok
-(
-true
-"
-Clone
-loaded
-OK
-"
-)
-;
 var
 e
 =
 event
 .
 target
+;
+ok
+(
+true
+{
+e
+.
+token
+}
+loaded
+OK
+)
 ;
 checkDuration
 (
@@ -258,9 +260,32 @@ clone
 .
 token
 =
+{
 e
 .
 token
+}
+(
+cloned
+)
+;
+manager
+.
+started
+(
+clone
+.
+token
+)
+;
+manager
+.
+finished
+(
+e
+.
+token
+)
 ;
 /
 /
@@ -335,18 +360,17 @@ target
 ;
 info
 (
+{
 e
 .
 token
-+
-"
-:
+}
 got
-"
-+
+{
 evt
 .
 type
+}
 )
 ;
 }
@@ -420,21 +444,16 @@ evt
 {
 info
 (
-"
-cloned
-"
-+
+{
 evt
 .
 target
 .
 token
-+
-"
-start
+}
+starts
 loading
 .
-"
 )
 ;
 /
