Bug 1289742. P7 - print PR logs for debugging r=kaku
MozReview-Commit-ID: 2x0TjjjcOuX

UltraBlame original commit: ca56682eb7c1388fb3cef8c4692b0f1cac2b909d

--- a/dom/media/test/test_load_same_resource.html
+++ b/dom/media/test/test_load_same_resource.html
@@ -762,12 +762,44 @@ token
 )
 ;
 }
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+"
+set
+"
+:
+[
+[
+"
+logging
+.
+MediaDecoder
+"
+"
+Debug
+"
+]
+]
+}
 manager
 .
 runTests
+.
+bind
 (
+manager
 gCloneTests
 initTest
+)
 )
 ;
 <
