Bug 1320880 - Add RTL support to date picker r=mconley
MozReview-Commit-ID: LIrOuUCfz17

UltraBlame original commit: ee721adb0e1034d8725e611d189a65f977dd3961

--- a/toolkit/content/datepicker.xhtml
+++ b/toolkit/content/datepicker.xhtml
@@ -307,7 +307,7 @@ button
 class
 =
 "
-left
+prev
 "
 /
 >
@@ -316,7 +316,7 @@ button
 class
 =
 "
-right
+next
 "
 /
 >
@@ -696,7 +696,7 @@ year
 view
 "
 )
-buttonLeft
+buttonPrev
 :
 root
 .
@@ -704,10 +704,10 @@ querySelector
 (
 "
 .
-left
+prev
 "
 )
-buttonRight
+buttonNext
 :
 root
 .
@@ -715,7 +715,7 @@ querySelector
 (
 "
 .
-right
+next
 "
 )
 weekHeader
