Bug 1343174 - Part 2 - Rewrite test_selectoraddtab to track tabs instead of browsers. r=ahunt
It's easy to get a tab's browser, but going the other way round requires always calling getTabForBrowser(), which then additionally has to search each open tab in turn to find the tab with the matching browser.
Also, the browser won't survive tab zombification, so for Part 3 we'll have to start keeping a reference to the tab object anyway.

MozReview-Commit-ID: B2aC7vB0cuj

UltraBlame original commit: 8c914488df8c683bd823b732850fed600f7affc7

--- a/mobile/android/tests/browser/chrome/test_selectoraddtab.html
+++ b/mobile/android/tests/browser/chrome/test_selectoraddtab.html
@@ -297,25 +297,97 @@ chrome
 window
 let
 chromeWin
+=
+Services
+.
+wm
+.
+getMostRecentWindow
+(
+"
+navigator
+:
+browser
+"
+)
+;
+let
+BrowserApp
+=
+chromeWin
+.
+BrowserApp
 ;
 /
 /
 Track
 the
-<
-browser
->
-s
+tabs
 where
 the
 tests
 are
 happening
 let
-browserBlank
+tabBlank
 ;
 let
-browserTest
+tabTest
+;
+function
+cleanupTabs
+(
+)
+{
+if
+(
+tabBlank
+)
+{
+BrowserApp
+.
+closeTab
+(
+tabBlank
+)
+;
+tabBlank
+=
+null
+;
+}
+if
+(
+tabTest
+)
+{
+BrowserApp
+.
+closeTab
+(
+tabTest
+)
+;
+tabTest
+=
+null
+;
+}
+}
+SimpleTest
+.
+registerCleanupFunction
+(
+function
+(
+)
+{
+cleanupTabs
+(
+)
+;
+}
+)
 ;
 const
 kTestPage
@@ -356,63 +428,6 @@ test_selectOrAdd
 (
 )
 {
-chromeWin
-=
-Services
-.
-wm
-.
-getMostRecentWindow
-(
-"
-navigator
-:
-browser
-"
-)
-;
-let
-BrowserApp
-=
-chromeWin
-.
-BrowserApp
-;
-SimpleTest
-.
-registerCleanupFunction
-(
-function
-(
-)
-{
-BrowserApp
-.
-closeTab
-(
-BrowserApp
-.
-getTabForBrowser
-(
-browserBlank
-)
-)
-;
-BrowserApp
-.
-closeTab
-(
-BrowserApp
-.
-getTabForBrowser
-(
-browserTest
-)
-)
-;
-}
-)
-;
 /
 /
 Add
@@ -423,7 +438,7 @@ with
 a
 blank
 page
-browserBlank
+tabBlank
 =
 BrowserApp
 .
@@ -447,8 +462,6 @@ selectedTab
 id
 }
 )
-.
-browser
 ;
 /
 /
@@ -459,11 +472,11 @@ s
 force
 the
 target
-browser
+tab
 to
 be
 added
-browserTest
+tabTest
 =
 BrowserApp
 .
@@ -483,13 +496,13 @@ selectedTab
 id
 }
 )
-.
-browser
 ;
 yield
 promiseBrowserEvent
 (
-browserTest
+tabTest
+.
+browser
 "
 DOMContentLoaded
 "
@@ -508,10 +521,12 @@ is
 BrowserApp
 .
 selectedBrowser
-browserTest
+tabTest
+.
+browser
 "
 Target
-browser
+tab
 is
 selected
 after
@@ -533,12 +548,7 @@ BrowserApp
 .
 selectTab
 (
-BrowserApp
-.
-getTabForBrowser
-(
-browserBlank
-)
+tabBlank
 )
 ;
 yield
@@ -565,8 +575,8 @@ is
 (
 BrowserApp
 .
-selectedBrowser
-browserBlank
+selectedTab
+tabBlank
 "
 about
 :
@@ -604,8 +614,6 @@ selectedTab
 id
 }
 )
-.
-browser
 ;
 yield
 promiseTabEvent
@@ -630,11 +638,11 @@ is
 (
 BrowserApp
 .
-selectedBrowser
-browserTest
+selectedTab
+tabTest
 "
 Target
-browser
+tab
 is
 selected
 .
@@ -653,12 +661,7 @@ BrowserApp
 .
 selectTab
 (
-BrowserApp
-.
-getTabForBrowser
-(
-browserBlank
-)
+tabBlank
 )
 ;
 yield
@@ -685,8 +688,8 @@ is
 (
 BrowserApp
 .
-selectedBrowser
-browserBlank
+selectedTab
+tabBlank
 "
 about
 :
@@ -733,8 +736,6 @@ startsWith
 kTestPage
 }
 )
-.
-browser
 ;
 yield
 promiseTabEvent
@@ -759,15 +760,19 @@ is
 (
 BrowserApp
 .
-selectedBrowser
-browserTest
+selectedTab
+tabTest
 "
 Target
-browser
+tab
 is
 selected
 .
 "
+)
+;
+cleanupTabs
+(
 )
 ;
 }
