--- a/mobile/android/tests/browser/chrome/test_selectoraddtab.html
+++ b/mobile/android/tests/browser/chrome/test_selectoraddtab.html
@@ -771,6 +771,179 @@ selected
 "
 )
 ;
+/
+/
+Switch
+back
+to
+about
+:
+blank
+BrowserApp
+.
+selectTab
+(
+tabBlank
+)
+;
+yield
+promiseTabEvent
+(
+BrowserApp
+.
+deck
+"
+TabSelect
+"
+)
+;
+/
+/
+Check
+that
+about
+:
+blank
+is
+selected
+is
+(
+BrowserApp
+.
+selectedTab
+tabBlank
+"
+about
+:
+blank
+is
+selected
+.
+"
+)
+;
+/
+/
+Zombify
+basic_article
+tabTest
+.
+zombify
+(
+)
+;
+/
+/
+Check
+that
+basic_article
+is
+actually
+zombified
+ok
+(
+tabTest
+.
+browser
+.
+__SS_restore
+"
+Target
+tab
+is
+set
+for
+delay
+loading
+.
+"
+)
+;
+is
+(
+tabTest
+.
+browser
+.
+currentURI
+.
+spec
+"
+about
+:
+blank
+"
+"
+Target
+tab
+is
+zombified
+.
+"
+)
+;
+/
+/
+Use
+selectOrAddTab
+to
+select
+the
+existing
+tab
+BrowserApp
+.
+selectOrAddTab
+(
+kTestPage
+{
+selected
+:
+true
+parentId
+:
+BrowserApp
+.
+selectedTab
+.
+id
+}
+)
+;
+yield
+promiseTabEvent
+(
+BrowserApp
+.
+deck
+"
+TabSelect
+"
+)
+;
+/
+/
+Check
+that
+basic_article
+is
+now
+selected
+is
+(
+BrowserApp
+.
+selectedTab
+tabTest
+"
+Target
+tab
+is
+selected
+.
+"
+)
+;
 cleanupTabs
 (
 )
