Bug 1343749. Part 3 - SimpleTest.js must be loaded before manifest.js which depends on SimpleTest. r=jib
MozReview-Commit-ID: F46BOyRKCmh

UltraBlame original commit: 3fbab2a560cefb71de5a1f02016a6dfe26c9dfe8

--- a/dom/media/tests/mochitest/test_peerConnection_capturedVideo.html
+++ b/dom/media/tests/mochitest/test_peerConnection_capturedVideo.html
@@ -31,35 +31,6 @@ js
 script
 >
 <
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-.
-.
-/
-.
-.
-/
-test
-/
-manifest
-.
-js
-"
->
-<
-/
-script
->
-<
 /
 head
 >
@@ -84,12 +55,6 @@ application
 javascript
 "
 >
-var
-manager
-=
-new
-MediaTestManager
-;
 createHTML
 (
 {
@@ -128,6 +93,32 @@ resolve
 =
 >
 {
+/
+/
+Run
+tests
+in
+sequence
+for
+log
+readability
+.
+PARALLEL_TESTS
+=
+1
+;
+let
+manager
+=
+new
+MediaTestManager
+;
+window
+.
+mediaTestManager
+=
+manager
+;
 manager
 .
 runTests
@@ -213,20 +204,6 @@ stack
 )
 )
 ;
-/
-/
-Run
-tests
-in
-sequence
-for
-log
-readability
-.
-PARALLEL_TESTS
-=
-1
-;
 function
 startTest
 (
@@ -234,6 +211,13 @@ media
 token
 )
 {
+let
+manager
+=
+window
+.
+mediaTestManager
+;
 manager
 .
 started
