Bug 1314361 - Part 2: Stop using addonId origin attribute for permission checks. r=billm
UltraBlame original commit: ec4c621bb3fef6b6a49e8b9993564d66d1053046

--- a/caps/tests/mochitest/test_addonMayLoad.html
+++ b/caps/tests/mochitest/test_addonMayLoad.html
@@ -251,6 +251,21 @@ waitForExplicitFinish
 (
 )
 ;
+let
+oldAddonIdCallback
+=
+aps
+.
+setExtensionURIToAddonIdCallback
+(
+uri
+=
+>
+uri
+.
+host
+)
+;
 SimpleTest
 .
 registerCleanupFunction
@@ -264,7 +279,7 @@ aps
 setAddonLoadURICallback
 (
 '
-addonA
+addona
 '
 null
 )
@@ -274,9 +289,16 @@ aps
 setAddonLoadURICallback
 (
 '
-addonB
+addonb
 '
 null
+)
+;
+aps
+.
+setExtensionURIToAddonIdCallback
+(
+oldAddonIdCallback
 )
 ;
 }
@@ -449,7 +471,7 @@ p
 ;
 }
 let
-exampleCom_addonA
+addonA
 =
 new
 Cu
@@ -467,21 +489,17 @@ io
 newURI
 (
 '
-http
+moz
+-
+extension
 :
 /
 /
-example
-.
-com
+addonA
+/
 '
 )
 {
-addonId
-:
-'
-addonA
-'
 }
 )
 {
@@ -496,70 +514,35 @@ XMLHttpRequest
 )
 ;
 let
-nullPrin_addonA
-=
-new
-Cu
-.
-Sandbox
-(
-ssm
-.
-createNullPrincipal
-(
-{
-addonId
-:
-'
-addonA
-'
-}
-)
-{
-wantGlobalProperties
-:
-[
-'
-XMLHttpRequest
-'
-]
-}
-)
-;
-let
-exampleCom_addonB
-=
-new
-Cu
-.
-Sandbox
-(
-ssm
-.
-createCodebasePrincipal
-(
-Services
-.
-io
-.
-newURI
-(
-'
-http
-:
-/
-/
-example
-.
-com
-'
-)
-{
-addonId
-:
-'
 addonB
+=
+new
+Cu
+.
+Sandbox
+(
+ssm
+.
+createCodebasePrincipal
+(
+Services
+.
+io
+.
+newURI
+(
 '
+moz
+-
+extension
+:
+/
+/
+addonB
+/
+'
+)
+{
 }
 )
 {
@@ -599,137 +582,7 @@ txt
 }
 tryLoad
 (
-exampleCom_addonA
-uriForDomain
-(
-'
-http
-:
-/
-/
-example
-.
-com
-'
-)
-)
-.
-then
-(
-function
-(
-success
-)
-{
-ok
-(
-success
-"
-same
--
-origin
-load
-should
-succeed
-for
-addon
-A
-"
-)
-;
-return
-tryLoad
-(
-nullPrin_addonA
-uriForDomain
-(
-'
-http
-:
-/
-/
-example
-.
-com
-'
-)
-)
-;
-}
-)
-.
-then
-(
-function
-(
-success
-)
-{
-ok
-(
-!
-success
-"
-null
--
-principal
-load
-should
-fail
-for
-addon
-A
-"
-)
-;
-return
-tryLoad
-(
-exampleCom_addonB
-uriForDomain
-(
-'
-http
-:
-/
-/
-example
-.
-com
-'
-)
-)
-;
-}
-)
-.
-then
-(
-function
-(
-success
-)
-{
-ok
-(
-success
-"
-same
--
-origin
-load
-should
-succeed
-for
-addon
-B
-"
-)
-;
-return
-tryLoad
-(
-exampleCom_addonA
+addonA
 uriForDomain
 (
 '
@@ -744,9 +597,6 @@ example
 org
 '
 )
-)
-;
-}
 )
 .
 then
@@ -778,7 +628,7 @@ aps
 setAddonLoadURICallback
 (
 '
-addonA
+addona
 '
 function
 (
@@ -805,7 +655,7 @@ aps
 setAddonLoadURICallback
 (
 '
-addonB
+addonb
 '
 function
 (
@@ -830,7 +680,7 @@ host
 return
 tryLoad
 (
-exampleCom_addonA
+addonA
 uriForDomain
 (
 '
@@ -879,57 +729,7 @@ A
 return
 tryLoad
 (
-nullPrin_addonA
-uriForDomain
-(
-'
-http
-:
-/
-/
-test1
-.
-example
-.
-org
-'
-)
-)
-;
-}
-)
-.
-then
-(
-function
-(
-success
-)
-{
-ok
-(
-!
-success
-"
-whitelisted
-null
-principal
-load
-of
-test1
-should
-still
-fail
-for
-addon
-A
-"
-)
-;
-return
-tryLoad
-(
-exampleCom_addonB
+addonB
 uriForDomain
 (
 '
@@ -981,7 +781,7 @@ B
 return
 tryLoad
 (
-exampleCom_addonB
+addonB
 uriForDomain
 (
 '
@@ -1030,7 +830,7 @@ B
 return
 tryLoad
 (
-exampleCom_addonA
+addonA
 uriForDomain
 (
 '
