Bug 713680 - Change default Windows monospace font from Courier New to Consolas. r=jfkthame r=masayuki
Consolas is narrower than Courier New, so we must adjust some tests to accommodate.

* Change some tests from generic 'monospace' to 'Courier New' to continue using previous font metrics.

* selectAtPoint.html no longer needs one of its Windows-only code paths because Firefox on Windows now selects the same text as it does on Mac and Linux.

* 323386-1.html's intermittent assertion failure (bug 718883) now appears to be 100% reliable on Windows, joining Linux and Android.

* size-1-ref.html reftest needs a little fuzz because the horizontal line of the test image's '4' character is ~1 pixel shorter than the reference image's.

MozReview-Commit-ID: EB5wzhG178U

UltraBlame original commit: da035ac87fe46773e46942b0e30bbbc2d28e8c8e

--- a/dom/events/test/test_continuous_wheel_events.html
+++ b/dom/events/test/test_continuous_wheel_events.html
@@ -169,7 +169,10 @@ font
 -
 family
 :
-monospace
+'
+Courier
+New
+'
 ;
 font
 -
@@ -1256,6 +1259,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 SimpleTest
 .
 waitForExplicitFinish
