--- a/dom/tests/mochitest/chrome/selectAtPoint.html
+++ b/dom/tests/mochitest/chrome/selectAtPoint.html
@@ -90,14 +90,12 @@ css
 >
 <
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
+"
+use
+strict
+"
+;
 var
 SimpleTest
 =
@@ -1126,85 +1124,6 @@ nsIDOMWindowUtils
 SELECT_CHARACTER
 )
 ;
-if
-(
-isLinux
-|
-|
-isMac
-)
-{
-/
-/
-XXX
-I
-think
-this
-is
-a
-bug
-the
-right
-hand
-selection
-is
-4
-.
-5
-characters
-over
-with
-a
-/
-/
-monspaced
-font
-.
-what
-we
-want
-:
-t
-(
-te
-)
-s
-(
-ts
-)
-election1
-what
-we
-get
-:
-t
-(
-te
-)
-st
-(
-se
-)
-lection1
-checkSelection
-(
-document
-"
-split
-selection
-"
-"
-tese
-"
-)
-;
-}
-else
-if
-(
-isWindows
-)
-{
 checkSelection
 (
 document
@@ -1217,7 +1136,6 @@ tets
 "
 )
 ;
-}
 /
 /
 Trying
@@ -1916,7 +1834,10 @@ font
 -
 family
 :
-monospace
+'
+Courier
+New
+'
 ;
 margin
 -
@@ -2127,7 +2048,12 @@ font
 -
 family
 :
-monospace
+\
+'
+Courier
+New
+\
+'
 ;
 '
 onload
