Backed out changeset da035ac87fe4 (bug 713680) for reftest failures
UltraBlame original commit: f50437ed4599e0065dce3e0e08b948fb13ea2664

--- a/dom/events/test/test_continuous_wheel_events.html
+++ b/dom/events/test/test_continuous_wheel_events.html
@@ -169,10 +169,7 @@ font
 -
 family
 :
-'
-Courier
-New
-'
+monospace
 ;
 font
 -
@@ -1259,11 +1256,6 @@ application
 javascript
 "
 >
-"
-use
-strict
-"
-;
 SimpleTest
 .
 waitForExplicitFinish
