--- a/dom/media/webaudio/test/test_audioContextSuspendResumeClose.html
+++ b/dom/media/webaudio/test/test_audioContextSuspendResumeClose.html
@@ -368,17 +368,6 @@ url
 callback
 )
 {
-todo
-(
-false
-"
-loadFile
-:
-"
-+
-url
-)
-;
 var
 xhr
 =
@@ -414,25 +403,6 @@ function
 (
 )
 {
-todo
-(
-false
-"
-loadFile
-:
-"
-+
-url
-+
-"
-calling
-callback
-.
-.
-.
-"
-)
-;
 callback
 (
 xhr
@@ -2725,7 +2695,6 @@ var
 tests
 =
 [
-testAudioContext
 testOfflineAudioContext
 testScriptProcessNodeSuspended
 testMultiContextOutput
@@ -2733,6 +2702,39 @@ testMultiContextInput
 testSuspendResumeEventLoop
 ]
 ;
+/
+/
+See
+Bug
+1305136
+many
+intermittent
+failures
+on
+Linux
+if
+(
+!
+navigator
+.
+platform
+.
+startsWith
+(
+"
+Linux
+"
+)
+)
+{
+tests
+.
+push
+(
+testAudioContext
+)
+;
+}
 remaining
 =
 tests
